v0.11.0 (???)
- Feature: use HTTPS for all API and image URLs
- Feature: add option to override image language (defaults to Kodi interface language)
- Feature: add option to remove all artwork for specific types of media

v0.10.2 (2017-07-25)
- Feature: don't repeatedly request artwork from an unavailable web service
- Fix: don't remove animated artwork set by other add-ons
- Fix: always allow movie sets to be re-matched from TMDB

v0.10.1 (2017-05-12)
- Fix removing auto-created thumbnails
- Don't crash on ConnectionError with web providers, but warn
- Fix error when removing specific or all not-configured artwork from all seasons
- Fix error with unicode characters from NFO file
- Convert JSON results from providers to UTF-8 encoded bytestrings `str`

v0.10.0 (2017-04-21)
- Automatically find new artwork for old items only once per day
  - Plus option to disable automatic updates for old items altogether
- Remove movie thumbnail Kodi automatically creates if your scraper is not configured to add a poster
- Remove explicit action "clean URLs", this happens automatically as items are processed
- Add manual action to remove all artwork of a specific type

v0.9.1 (2017-02-11)
- Fix setting season artwork

v0.9.0 (2017-01-27)
- Support movie set artwork
- Merge context items into main add-on
- Rearrange libs, drop last dependency not available in official Kodi repo
- Spread out checking for new artwork so they don't happen all at once (after the first run)
- Fix error when displaying non-ASCII characters in GUI
- Improve error handling for certain HTTP 5xx errors from fanart.tv
- Reduce TheMovieDB image rating sort adjustment
- Adjust TVDB image rating sort, so that an image with one rating of 10 doesn't end up at the top
- Move code from resources/lib to lib

v0.8.2 (2016-12-01)
- Fix manually selecting new fanart

v0.8.1 (2016-11-23)
- Fix silly bug in 0.8.0

v0.8.0 (2016-11-21)
- Add season fanart from fanart.tv